--- a/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
@@ -78,7 +78,12 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Courses <span class="caret"></span></a>
+                                        <a href="/Courses/courses"
+                                           class="dropdown-toggle disabled"
+                                           data-toggle="dropdown"
+                                           role="button">
+                                            Courses <span class="caret"></span>
+                                        </a>
                                         <ul class="dropdown-menu">
                                             <li>
                                                 @Html.ActionLink("Free Online Courses", "FreeCourses", "Courses")
